--- a/Notebooks/data_wrangling.ipynb
+++ b/Notebooks/data_wrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "e266c24d-8af1-48a5-b515-bfdc5bdd8778",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "0423b683-0b7a-4483-a588-51214cc3c33c",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "f4d70ffe-ee42-4b1c-aa8f-f3ec7ce48102",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "5bbc176a-8c40-4d40-9ae7-41a09e9f3694",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,12 +345,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "86d0622f-a02f-4b4f-bfcb-545d8ca9e979",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#convert YrSold column to datetime\n",
+    "#convert YrSold, YearBuilt, & YearRemodAdd columns to datetime\n",
     "train_data['YrSold'] = pd.to_datetime(train_data['YrSold'].astype(str), format='%Y')\n",
     "train_data['YearBuilt'] = pd.to_datetime(train_data['YearBuilt'].astype(str), format='%Y')\n",
     "train_data['YearRemodAdd'] = pd.to_datetime(train_data['YearRemodAdd'].astype(str), format='%Y')"
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "847a67fc-6c1f-4920-8732-9137844d937a",
    "metadata": {},
    "outputs": [
@@ -607,7 +607,7 @@
        "[81 rows x 10 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "97e51be7-9b0d-44b8-816a-7075faa3bd84",
    "metadata": {},
    "outputs": [
@@ -727,7 +727,7 @@
        "[81 rows x 2 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "c96542ef-ce1e-425b-8141-39af6523857e",
    "metadata": {},
    "outputs": [
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "5433cfd4-5246-41d5-ae8a-38ffde9fecb9",
    "metadata": {},
    "outputs": [
@@ -777,7 +777,7 @@
        "Text(0, 0.5, 'Sale price ($)')"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "id": "9298ecc0-dc97-4471-943b-dbd6da592894",
    "metadata": {},
    "outputs": [
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "id": "33d5f0a5-69bc-4231-b325-8b3fc82653cb",
    "metadata": {},
    "outputs": [
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "id": "6cd78dec-9e0d-41f9-8435-47d2add5dd45",
    "metadata": {},
    "outputs": [
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "id": "46494cd4-47fe-43c9-8a41-e245678201c7",
    "metadata": {},
    "outputs": [
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "id": "ddda82bc-0db5-411c-99ae-994a14031e1a",
    "metadata": {},
    "outputs": [],
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "id": "607fb80d-99fb-415a-ae55-6dd9fc82eb36",
    "metadata": {},
    "outputs": [
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 16,
    "id": "077799c5-8be1-4841-853f-5b4573866f6f",
    "metadata": {},
    "outputs": [
@@ -957,7 +957,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\aless\\AppData\\Local\\Temp\\ipykernel_17692\\1227467394.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\aless\\AppData\\Local\\Temp\\ipykernel_9804\\1227467394.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "id": "af6b97ec-f1f7-4ad4-bc33-b1b697b122a5",
    "metadata": {},
    "outputs": [
@@ -985,7 +985,7 @@
        "(1460, 78)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "id": "2fd1819f-5b50-4a49-bbbd-57284d5c46e1",
    "metadata": {},
    "outputs": [],
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 19,
    "id": "61e3c534-aff0-4f3e-a172-e2714b7e60ca",
    "metadata": {},
    "outputs": [],
